version/0.19/_sources/api/solver/_autosummary/settings/parametric_studies.rst.txt
:orphan:

.. _parametric_studies:

parametric_studies
==================

.. autoclass:: ansys.fluent.core.solver.settings_241.parametric_studies.parametric_studies
    :show-inheritance:

.. rubric:: Methods

================================================   =========================================

Method                                                                               Summary

================================================   =========================================
:ref:`delete <delete_1>`                                            Delete selected objects.

:ref:`list <list>`                                            List the names of the objects.

:ref:`list_properties <list_properties_1>`             List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                Create a copy of the object.

:ref:`initialize <initialize_2>`                                     Start Parametric Study.

:ref:`duplicate <duplicate>`                                     Duplicate Parametric Study.

:ref:`set_as_current <set_as_current>`                                 Set As Current Study.

:ref:`use_base_data <use_base_data>`                                          Use Base Data.

:ref:`export_design_table <export_design_table>`                  Export Design Point Table.

:ref:`import_design_table <import_design_table>`                  Import Design Point Table.

================================================   =========================================

.. rubric:: Named object type

:ref:`parametric_studies_child <parametric_studies_child>`


.. rubric:: Included in:

==================   ==================

Parent                          Summary

==================   ==================
:ref:`root <root>`       'root' object.

==================   ==================

